--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ f <div class="container">
   </div>
   <div id="desc" class="row">
     <h2>Kill the boss in dungeon 5</h2>
+    <p>Use arrow keys to move.</p>
   </div>
   </div>
   <!-- end heading. -->
