--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@ f <div class="container">
     <h1>Roguelike Dungeon Crawler</h1>
   </div>
   <div id="desc" class="row">
-    <h2>Kill the boss in dungeon 5</h2>
-    <p>Use arrow keys to move.</p>
+    <h2>Kill the boss in dungeon 5<em>(use arrow keys to move.)</em></h2>
   </div>
   </div>
   <!-- end heading. -->
